@@ -228,6 +228,7 @@ features:
   the fixing status of a parameter is copied to sub-SCIPs, which allows to ensure that certain parameters
   are also not changed when, e.g., heuristics change emphasis settings or also specific parameters
 - added dual presolving for and-constraints
+- the statistics shows for a branching rule the number of calls for LP, extern, and pseudo candidates
 
 Makefile
 - CppAD source code is now distributed with SCIP (src/cppad), so that lib/cppad is not used anymore;
